Overflow-x solved?

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1005,7 +1005,7 @@ main {
       font-size: clamp(3.6rem, 8vw - 1rem, 64px);
       text-transform: none;
       margin-bottom: 25px;
-      text-wrap: balance;
+      white-space: break-spaces;
       //max-width: 100%;
    }
 
